# How2CookRag

./: RAG系统构建.md  config.py  main.py  pyproject.toml
data/recipes/breakfast/: 蛋炒饭.md
data/recipes/dessert/: 提拉米苏.md
data/recipes/meat_dish/: 红烧肉.md
data/recipes/soup/: 番茄蛋汤.md
data/recipes/vegetable_dish/: 番茄炒蛋.md
rag_modules/: data_preparation.py  generation_integration.py  index_construction.py  retrieval_optimization.py
vector_index/: index.faiss  index.pkl
