[project]
name = "how2cookrag"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.0",
    "langchain-text-splitters>=1.1.2",
    "langchain-openai>=0.3.0",
    "dashscope>=1.25.19",
    "faiss-cpu>=1.14.2",
    "rank-bm25>=0.2.2",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
